Fix main post grid alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ a {
 }
 
 .content > div#reading {
-  grid-template-columns: 1.1fr 0.9fr 0.2fr 3rem;
+  grid-template-columns: 1.2fr 0.75fr 0.25fr 3rem;
 }
 
 .post-header > .post-title {
@@ -158,7 +158,7 @@ a {
 
 .navbar-content {
   display: grid;
-  grid-template-columns: 0.3fr 1.5fr 0.3fr;
+  grid-template-columns: 0.3fr 1.6fr 0.3fr;
   max-width: 64rem;
   margin: auto;
   z-index: 999;
